--- a/EIPS/eip-6809.md
+++ b/EIPS/eip-6809.md
@@ -450,7 +450,7 @@ Average Gas used (_GWEI_):
 
 ## Reference Implementation
 
-The GitHub repository [KBTstandard repository](../assets/eip-6809/README.md) contains the implementation. There's also a [diagram](../assets/eip-6809/Contract%20Interactions%20diagram.svg) with the contract interactions.
+The implementation is located in the [eip-6809 assets](../assets/eip-6809/README.md) directory. There's also a [diagram](../assets/eip-6809/Contract%20Interactions%20diagram.svg) with the contract interactions.
 
 ## Security Considerations
 
