Changed the heading in Specifications section

--- a/EIPS/eip-6809.md
+++ b/EIPS/eip-6809.md
@@ -55,7 +55,7 @@ During the development process, the potential advantages **KBTs** explored were 
 
 ## Specification
 
-### ERC-N (Token Contract)
+### IKBT721 (Token Contract)
 
 **NOTES**:
 
