Spell Check 1 + BIP / SLIP removal + the ERC check + Footnote removal & # Update

--- a/EIPS/eip-6809.md
+++ b/EIPS/eip-6809.md
@@ -1,7 +1,7 @@
 ---
 eip: 6809
 title: Non-Fungible Key Bound Token
-description: An interface for Non-Fungible Key Bound Tokens, also known as a NFKBT.
+description: An interface for Non-Fungible Key Bound Tokens, also known as an NFKBT.
 author: Mihai Onila (@MihaiORO), Nick Zeman (@NickZCZ), Narcis Cotaie (@NarcisCRO)
 discussions-to: https://ethereum-magicians.org/t/non-fungible-key-bound-token-kbt/13625
 status: Draft
@@ -17,39 +17,39 @@ A standard interface for Non-Fungible Key Bound Tokens (**NFKBT/s**), a subset o
 
 The following standardizes an API for tokens within smart contracts and provides basic functionality to the [addBindings](#addbindings-function) function. This function designates **Key Wallets**[^1], which are responsible for conducting a **Safe Transfer**[^2]. During this process, **NFKBTs** are safely approved so they can be spent by the user or an on-chain third-party entity.
 
-The premise of **NFKBTs** is to provide fully optional security features built directly into the non-fungible asset, via the concept of _allow_ found in the [allowTransfer](#allowtransfer-function) and [allowApproval](#allowapproval-function) functions. These functions are called by one of the **Key Wallets**[^1] and _allow_ the **Holding Wallet** to either call the already familiar `transfer` and `approve` function found in [ERC-721](./eip-721.md). Responsibility for the **NFKBT** is therefore split. The **Holding Wallet** contains the asset and **Key Wallets** have authority over how the assets can be spent or approved. **Default Behaviors**[^12] of a traditional non-fungible ERC-721 can be achieved by simply never using the [addBindings](#addbindings-function) function.
+The premise of **NFKBTs** is to provide fully optional security features built directly into the non-fungible asset, via the concept of _allow_ found in the [allowTransfer](#allowtransfer-function) and [allowApproval](#allowapproval-function) functions. These functions are called by one of the **Key Wallets**[^1] and _allow_ the **Holding Wallet** to either call the already familiar `transfer` and `approve` function found in [ERC-721](./eip-721.md). Responsibility for the **NFKBT** is therefore split. The **Holding Wallet** contains the asset and **Key Wallets** have authority over how the assets can be spent or approved. **Default Behaviors**[^10] of a traditional non-fungible ERC-721 can be achieved by simply never using the [addBindings](#addbindings-function) function.
 
 We considered **NFKBTs** being used by every individual who wishes to add additional security to their non-fungible assets, as well as consignment to third-party wallets/brokers/banks/insurers/museums. **NFKBTs** allow tokens to be more resilient to attacks/thefts, by providing additional protection to the asset itself on a self-custodial level.
 
 ## Motivation
 
-TIn this fast-paced technologically advancing world, people learn and mature at different speeds. The goal of global adoption must take into consideration the target demographic is of all ages and backgrounds. Unfortunately for self-custodial assets, one of the greatest pros is also one of its greatest cons. The individual is solely responsible for their actions and adequately securing their assets. If a mistake is made leading to a loss of funds, no one is able to guarantee their return.
+In this fast-paced technologically advancing world, people learn and mature at different speeds. The goal of global adoption must take into consideration the target demographic is of all ages and backgrounds. Unfortunately for self-custodial assets, one of the greatest pros is also one of its greatest cons. The individual is solely responsible for their actions and adequately securing their assets. If a mistake is made leading to a loss of funds, no one is able to guarantee their return.
 
-In 2021, the United States Federal Trade Commission received more than 46,000 filed reports of crypto theft valued at over $1 Billion[^11]. Theft and malicious scams are an issue in any financial sector and oftentimes lead to stricter regulation. However, government-imposed regulation goes against one of this space’s core values. Efforts have been made to increase security within the space through centralized and decentralized means. Up until now, no one has offered a solution that holds onto the advantages of both whilst eliminating their disadvantages.
+In 2021, the United States Federal Trade Commission received more than 46,000 filed reports of crypto theft valued at over $1 Billion[^9]. Theft and malicious scams are an issue in any financial sector and oftentimes lead to stricter regulation. However, government-imposed regulation goes against one of this space’s core values. Efforts have been made to increase security within the space through centralized and decentralized means. Up until now, no one has offered a solution that holds onto the advantages of both whilst eliminating their disadvantages.
 
 We asked ourselves the same question as many have in the past, “How does one protect the wallet?”. After a while, realizing the question that should be asked is “How does one protect the asset?”. Creating the wallet is free, the asset is what has value and is worth protecting. This question led to the development of **KBTs**. A solution that is fully optional and can be tailored so far as the user is concerned. Individual assets remain protected even if the seed phrase or private key is publicly released, as long as the security feature was activated.
 
-**NFKBTs** saw the need to improve on the widely used non-fungible ERC-721 token standard. The security of non-fungible assets is a topic that concerns every entity in the crypto space, as their current and future use cases continue to be explored. **NFKBTs** provide a scalable decentralized security solution that takes security one step beyond wallet security e.g. _BIP-39_[^5], focusing on the token's ability to remain secure. The security is on the blockchain itself, which allows every demographic that has access to the internet to secure their assets without the need for current hardware or centralized solutions. Made to be a promising alternative, **NFKBTs** inherit all the characteristics of an ERC-721. This was done so **NFKBTs** could be used on every dApp that is configured to use traditional non-fungible tokens.
+**NFKBTs** saw the need to improve on the widely used non-fungible ERC-721 token standard. The security of non-fungible assets is a topic that concerns every entity in the crypto space, as their current and future use cases continue to be explored. **NFKBTs** provide a scalable decentralized security solution that takes security one step beyond wallet security, focusing on the token's ability to remain secure. The security is on the blockchain itself, which allows every demographic that has access to the internet to secure their assets without the need for current hardware or centralized solutions. Made to be a promising alternative, **NFKBTs** inherit all the characteristics of an ERC-721. This was done so **NFKBTs** could be used on every dApp that is configured to use traditional non-fungible tokens.
 
 During the development process, the potential advantages **KBTs** explored were the main motivation factors leading to their creation;
 
-1. Completely Decentralized: The security features are fully decentralized meaning no third-party will have access to user funds when activated. This was done in order to truly stay in line with the premise of self-custodial assets, responsibility and values.
+1. Completely Decentralized: The security features are fully decentralized meaning no third-party will have access to user funds when activated. This was done to truly stay in line with the premise of self-custodial assets, responsibility and values.
 
 2. Limitless Scalability: Centralized solutions require the creation of an account and their availability may be restricted based on location. **NFKBTs** do not face regional restrictions or account creation. Decentralized security solutions such as hardware options face scalability issues requiring transport logistics, secure shipping, and vendor. **NFKBTs** can be used anywhere around the world by anyone who so wishes, provided they have access to the internet.
 
 3. Fully Optional Security: Security features are optional, customizable and removable. It’s completely up to the user to decide the level of security they would like when using **NFKBTs**.
 
-4. Default Functionality: If the user would like to use **NFKBTs** as a traditional ERC-721, the security features do not have to be activated. As the token inherits all of the same characteristics, it results in the token acting with traditional non-fungible **Default Behaviours**[^12]. However, even when the security features are activated, the user will still have the ability to customize the functionality of the various features based on their desired outcome. The user can pass a set of custom and or **Default Values**[^13] manually or through a dApp.
+4. Default Functionality: If the user would like to use **NFKBTs** as a traditional ERC-721, the security features do not have to be activated. As the token inherits all of the same characteristics, it results in the token acting with traditional non-fungible **Default Behaviors**[^10]. However, even when the security features are activated, the user will still have the ability to customize the functionality of the various features based on their desired outcome. The user can pass a set of custom and or **Default Values**[^11] manually or through a dApp.
 
-5. Unmatched Security: By calling the [addBindings](#addbindings-function) function a **Key Wallet**[^1] is now required for the [allowTransfer](#allowtransfer-function) or [allowApproval](#allowapproval-function) function. The [allowTransfer](#allowtransfer-function) function requires 4 parameters, `_tokenId`[^7], `_time`[^8], `_address`[^9], and `_allFunds`[^15], where as the [allowApproval](#allowapproval-function) function has 2 parameters, `_time`[^16] and `_numberOfTransfers`[^17]. In addition to this, **NFKBTs** have a [safeFallback](#safefallback-function) and [resetBindings](#resetbindings-function) function. The combination of all these prevent and virtually cover every single point of failure that is present with a traditional ERC-721, when properly used.
+5. Unmatched Security: By calling the [addBindings](#addbindings-function) function a **Key Wallet**[^1] is now required for the [allowTransfer](#allowtransfer-function) or [allowApproval](#allowapproval-function) function. The [allowTransfer](#allowtransfer-function) function requires 4 parameters, `_tokenId`[^6], `_time`[^7], `_address`[^8], and `_allFunds`[^13], where as the [allowApproval](#allowapproval-function) function has 2 parameters, `_time`[^14] and `_numberOfTransfers`[^15]. In addition to this, **NFKBTs** have a [safeFallback](#safefallback-function) and [resetBindings](#resetbindings-function) function. The combination of all these prevent and virtually cover every single point of failure that is present with a traditional ERC-721, when properly used.
 
-6. Security Fail-Safes: With **NFKBTs**, users can be confident that their tokens are safe and secure, even if the **Holding Wallet**[^6] or one of the **Key Wallets**[^1] has been compromised. If the owner suspects that the **Holding Wallet**[^6] has been compromised or lost access, they can call the [safeFallback](#safefallback-function) function from one of the **Key Wallets**[^1]. This moves the assets to the other **Key Wallet**[^1] preventing a single point of failure. If the owner suspects that one of the **Key Wallets**[^1] has been comprised or lost access, the owner can call the [resetBindings](#resetbindings-function) function from `_keyWallet1`[^3] or `_keyWallet2`[^4]. This resets the **NFKBTs** security feature and allows the **Holding Wallet**[^6] to call the [addBindings](#addbindings-function) function again. New **Key Wallets**[^1] can therefore be added and a single point of failure can be prevented.
+6. Security Fail-Safes: With **NFKBTs**, users can be confident that their tokens are safe and secure, even if the **Holding Wallet**[^5] or one of the **Key Wallets**[^1] has been compromised. If the owner suspects that the **Holding Wallet**[^5] has been compromised or lost access, they can call the [safeFallback](#safefallback-function) function from one of the **Key Wallets**[^1]. This moves the assets to the other **Key Wallet**[^1] preventing a single point of failure. If the owner suspects that one of the **Key Wallets**[^1] has been comprised or lost access, the owner can call the [resetBindings](#resetbindings-function) function from `_keyWallet1`[^3] or `_keyWallet2`[^4]. This resets the **NFKBTs** security feature and allows the **Holding Wallet**[^5] to call the [addBindings](#addbindings-function) function again. New **Key Wallets**[^1] can therefore be added and a single point of failure can be prevented.
 
-7. Anonymous Security: Frequently, centralized solutions ask for personal information that is stored and subject to prying eyes. Purchasing decentralized hardware solutions are susceptible to the same issues e.g. a shipping address, payment information or a camera recording during a physical cash pick-up. This may be considered by some as infringing on their privacy and asset anonymity. **NFKBTs** ensures user confidentially as everything can be done remotely under a pseudonym on the blockchain.
+7. Anonymous Security: Frequently, centralized solutions ask for personal information that is stored and subject to prying eyes. Purchasing decentralized hardware solutions are susceptible to the same issues e.g. a shipping address, payment information, or a camera recording during a physical cash pick-up. This may be considered by some as infringing on their privacy and asset anonymity. **NFKBTs** ensure user confidentially as everything can be done remotely under a pseudonym on the blockchain.
 
 8. Low-Cost Security: The cost of using **NFKBTs** security features correlate to on-chain fees, the current _GWEI_ at the given time. As a standalone solution, they are a viable cost-effective security measure feasible to the majority of the population.
 
-9. Environmentally Friendly: Since the security features are coded into the **NFKBT**, there is no need for centralized servers, shipping, or the production of physical object/s. Thus leading to a minimal carbon footprint by the use of **NFKBTs**, working hand in hand with Ethereum’s change to a _PoS_[^14] network.
+9. Environmentally Friendly: Since the security features are coded into the **NFKBT**, there is no need for centralized servers, shipping, or the production of physical object/s. Thus leading to a minimal carbon footprint by the use of **NFKBTs**, working hand in hand with Ethereum’s change to a _PoS_[^12] network.
 
 10. User Experience: The security feature can be activated by a simple call to the [addBindings](#addbindings-function) function. The user will only need two other wallets, which will act as `_keyWallet1`[^3] and `_keyWallet2`[^4], to gain access to all of the benefits **NFKBTs** offer. The optional security features improve the overall user experience and Ethereum ecosystem by ensuring a safety net for those who decide to use it. Those that do not use the security features are not hindered in any way. This safety net can increase global adoption as people can remain confident in the security of their assets, even in the scenario of a compromised wallet.
 
@@ -428,7 +428,7 @@ function setApprovalForAll(address _operator, bool _approved) public virtual ove
 
 ## Rationale
 
-The intent from individual technical decisions made during the development of **NFKBTs** focused on maintaining consistency and backward compatibility with ERC-721s, all the while offering self-custodial security features to the user. It was important that **NFKBTs** inherited all of ERC-721s characteristics to comply with requirements found in dApps which use non-fungible tokens on their platform. In doing so, it allowed for flawless backward compatibility to take place and gave the user the choice to decide if they want their **NFKBTs** to act with **Default Behaviours**[^12]. We wanted to ensure that wide-scale implementation and adoption of **NFKBTs** could take place immediately, without the greater collective needing to adapt and make changes to the already flourishing decentralized ecosystem.
+The intent from individual technical decisions made during the development of **NFKBTs** focused on maintaining consistency and backward compatibility with ERC-721s, all the while offering self-custodial security features to the user. It was important that **NFKBTs** inherited all of ERC-721s characteristics to comply with requirements found in dApps which use non-fungible tokens on their platform. In doing so, it allowed for flawless backward compatibility to take place and gave the user the choice to decide if they want their **NFKBTs** to act with **Default Behaviors**[^10]. We wanted to ensure that wide-scale implementation and adoption of **NFKBTs** could take place immediately, without the greater collective needing to adapt and make changes to the already flourishing decentralized ecosystem.
 
 For developers and users alike, the [allowTransfer](#allowtransfer-function) and [allowApproval](#allowapproval-function) functions both return bools rather than reverting on failure. This decision was done purposefully, to keep consistency with the already familiar ERC-721. Additional technical decisions related to self-custodial security features are broken down and located within the [Security Considerations](#security-considerations) section.
 
@@ -456,13 +456,13 @@ The implementation is located in the [eip-6809 assets](../assets/eip-6809/README
 
 **NFKBTs** were designed with security in mind every step of the way. Below are some design decisions that were rigorously discussed and thought through during the development process.
 
-**Key Wallets**[^1]: These have been limited to two, in order to prevent a pitfall scenario of a user adding multiple wallets. For this reason, we have stuck to _BIP-39_[^5] split across three wallets as opposed to creating a _SLIP-39_[^10] security solution. Thus we can prevent a disastrous [safeFallback](#safefallback-function) scenario.
+**Key Wallets**[^1]: When calling the [addBindings](#addbinings-function) function for an **NFKBT**, the user must input 2 wallets that will then act as `keyWallet1`[^3] and `keyWallet2 [^4]. They are added simultaneously to reduce user fees, minimize the chance of human error and prevent a pitfall scenario. If the user had the ability to add multiple wallets it would not only result in additional fees and avoidable confusion but would enable a potentially disastrous [safeFallback](#safefallback-function) situation to occur. For this reason, all **KBTs** work under a 3-wallet system when security features are activated.
 
 Typically if a wallet is compromised, the non-fungible assets within are at risk. With **NFKBTs** there are two different functions that can be called from a **Key Wallet**[^1] depending on which wallet has been compromised.
 
-Scenario: **Holding Wallet**[^6] has been compromised, call [safeFallback](#safefallback-function).
+Scenario: **Holding Wallet**[^5] has been compromised, call [safeFallback](#safefallback-function).
 
-[safeFallback](#safefallback-function): This function was created in the event that the owner believes the **Holding Wallet**[^6] has been compromised. It can also be used if the owner losses access to the **Holding Wallet**[^6]. In this scenario, the user has the ability to call [safeFallback](#safefallback-function) from one of the **Key Wallets**[^1]. **NFKBTs** are then redirected from the **Holding Wallet**[^6] to the other **Key Wallet**[^1].
+[safeFallback](#safefallback-function): This function was created in the event that the owner believes the **Holding Wallet**[^5] has been compromised. It can also be used if the owner losses access to the **Holding Wallet**[^5]. In this scenario, the user has the ability to call [safeFallback](#safefallback-function) from one of the **Key Wallets**[^1]. **NFKBTs** are then redirected from the **Holding Wallet**[^5] to the other **Key Wallet**[^1].
 
 By redirecting the **NFKBTs** it prevents a single point of failure. If an attacker were to call [safeFallback](#safefallback-function) and the **NFKBTs** redirected to the **Key Wallet**[^1] that called the function, they would gain access to all the **NFKBTs**.
 
@@ -470,33 +470,33 @@ Scenario: **Key Wallet**[^1] has been compromised, call [resetBindings](#resetbi
 
 [resetBindings](#resetbindings-function): This function was created in the event that the owner believes `keyWallet1`[^3] or `keyWallet2`[^4] has been compromised. It can also be used if the owner losses access to one of the **Key Wallets**[^1]. In this instance, the user has the ability to call [resetBindings](#resetbindings-function), removing the bound **Key Wallets**[^1] and resetting the security features. The **NFKBTs** will now function as a traditional ERC-721 until [addBindings](#addbindings-function) is called again and a new set of **Key Wallets**[^1] are added.
 
-The reason why `keyWallet1`[^3] or `keyWallet2`[^4] are required to call the [resetBindings](#resetbindings-function) function is because a **Holding Wallet**[^6] having the ability to call [resetBindings](#resetbindings-function) could result in an immediate loss of **NFKBTs**. The attacker would only need to gain access to the **Holding Wallet**[^6] and call [resetBindings](#resetbindings-function).
+The reason why `keyWallet1`[^3] or `keyWallet2`[^4] are required to call the [resetBindings](#resetbindings-function) function is because a **Holding Wallet**[^5] having the ability to call [resetBindings](#resetbindings-function) could result in an immediate loss of **NFKBTs**. The attacker would only need to gain access to the **Holding Wallet**[^5] and call [resetBindings](#resetbindings-function).
 
 In the scenario that 2 of the 3 wallets have been compromised, there is nothing the owner of the **NFKBTs** can do if the attack is malicious. However, by allowing 1 wallet to be compromised, holders of non-fungible tokens built using the **NFKBT** standard are given a second chance, unlike other current standards.
 
-The [allowTransfer](#allowtransfer-function) function is in place to guarantee a **Safe Transfer**[^2], but can also have **Default Values**[^13] set by a dApp to emulate **Default Bahviours**[^12] of a traditional ERC-721. It enables the user to highly specify the type of transfer they are about to conduct, whilst simultaneously allowing the user to unlock all the **NFKBTs** to anyone for an unlimited amount of time. The desired security is completely up to the user.
+The [allowTransfer](#allowtransfer-function) function is in place to guarantee a **Safe Transfer**[^2], but can also have **Default Values**[^11] set by a dApp to emulate **Default Behaviors**[^10] of a traditional ERC-721. It enables the user to highly specify the type of transfer they are about to conduct, whilst simultaneously allowing the user to unlock all the **NFKBTs** to anyone for an unlimited amount of time. The desired security is completely up to the user.
 
 This function requires 4 parameters to be filled and different combinations of these result in different levels of security;
 
-Parameter 1 `_tokenId`[^7]: This is the ID of the **NFKBT** that will be spent on a transfer.
+Parameter 1 `_tokenId`[^6]: This is the ID of the **NFKBT** that will be spent on a transfer.
 
-Parameter 2 `_time`[^8]: The number of blocks the **NFKBT** can be transferred starting from the current block timestamp.
+Parameter 2 `_time`[^7]: The number of blocks the **NFKBT** can be transferred starting from the current block timestamp.
 
-Parameter 3 `_address`[^9]: The destination the **NFKBT** will be sent to.
+Parameter 3 `_address`[^8]: The destination the **NFKBT** will be sent to.
 
-Parameter 4 `_allFunds`[^15]: This is a boolean value. When false, the `transfer` function takes into consideration Parameters 1, 2 and 3. If the value is true, the `transfer` function will revert to a **Default Behaviour**[^12], the same as a traditional ERC-721.
+Parameter 4 `_allFunds`[^13]: This is a boolean value. When false, the `transfer` function takes into consideration Parameters 1, 2 and 3. If the value is true, the `transfer` function will revert to a **Default Behavior**[^10], the same as a traditional ERC-721.
 
-The [allowTransfer](#allowtransfer-function) function requires a **Key Wallet**[^1] and enables the **Holding Wallet**[^6] to conduct the transaction within the previously specified parameters. These parameters were added in order to provide additional security by limiting the **Holding Wallet**[^6] in the case it was compromised without the user's knowledge.
+The [allowTransfer](#allowtransfer-function) function requires a **Key Wallet**[^1] and enables the **Holding Wallet**[^5] to conduct the transaction within the previously specified parameters. These parameters were added in order to provide additional security by limiting the **Holding Wallet**[^5] in case it was compromised without the user's knowledge.
 
 The [allowApproval](#allowapproval-function) function provides extra security when allowing on-chain third parties to use your **NFKBTs** on your behalf. This is especially useful when a user is met with common malicious attacks e.g. draining dApp.
 
 This function requires 2 parameters to be filled and different combinations of these result in different levels of security;
 
-Parameter 1 `_time`[^16]: The number of blocks that the approval of a third-party service can take place, starting from the current block timestamp.
+Parameter 1 `_time`[^14]: The number of blocks that the approval of a third-party service can take place, starting from the current block timestamp.
 
-Parameter 2 `_numberOfTransfers_`[^17]: The number of transactions a third-party service can conduct on the user's behalf.
+Parameter 2 `_numberOfTransfers_`[^15]: The number of transactions a third-party service can conduct on the user's behalf.
 
-The [allowApproval](#allowapproval-function) function requires a **Key Wallet**[^1] which enables the **Holding Wallet**[^6] to allow a third-party service by using the `approve` function. These parameters were added to provide extra security when granting permission to a third-party that uses assets on the user's behalf. Parameter 1, `_time`[^16], is a limitation to when the **Holding Wallet**[^6] can `approve` a third-party service. Parameter 2 ,`_numberOfTranfers`[^17], is a limitation to the number of transactions the approved third-party service can conduct on the user's behalf before revoking approval.
+The [allowApproval](#allowapproval-function) function requires a **Key Wallet**[^1] which enables the **Holding Wallet**[^5] to allow a third-party service by using the `approve` function. These parameters were added to provide extra security when granting permission to a third-party that uses assets on the user's behalf. Parameter 1, `_time`[^14], is a limitation to when the **Holding Wallet**[^5] can `approve` a third-party service. Parameter 2, `_numberOfTransfers`[^15], is a limitation to the number of transactions the approved third-party service can conduct on the user's behalf before revoking approval.
 
 ## Copyright
 
@@ -504,20 +504,18 @@ Copyright and related rights waived via [CC0](../LICENSE.md).
 
 ---
 
-[^1]: The **Key Wallet/s** refer to `_keyWallet1` or `_keyWallet2` which can call the `safeFallback`, `resetBindings`, `allowTransfer` and `allowApproval` functions.
+[^1]: The **Key Wallet/s** refers to `keyWallet1` or `_keyWallet2` which can call the `safeFallback`, `resetBindings`, `allowTransfer` and `allowApproval` functions.
 [^2]: A **Safe Transfer** is when 1 of the **Key Wallets** safely approved the use of the **NFKBTs**.
 [^3]: The `keyWallet1` is 1 of the 2 **Key Wallets** set when calling the `addBindings` function.
 [^4]: The `keyWallet2` is 1 of the 2 **Key Wallets** set when calling the `addBindings` function.
-[^5]: Security known as _BIP-39_, defines how wallets create seed phrases and generate encryption keys.
-[^6]: The **Holding Wallet** refers to the wallet containing the **NFKBTs**.
-[^7]: The `_tokenId` represents the ID of the **NFKBT** intended to be spent.
-[^8]: The `_time` in `allowTransfer` represents the number of blocks a `transferFrom` can take place in.
-[^9]: The `_address` represents tha address that the **NFKBT** will be sent too.
-[^10]: Security known as _Slip-39_, describes a way to securely back up a secret value using Shamir's Secret Sharing scheme. The secret value, called a Master Secret (MS) in SLIP-39 terminology, is first encrypted by a passphrase, producing an Encrypted Master Secret (EMS).
-[^11]: The amount stolen in the USA provided by FTC reports.
-[^12]: A **Default Behaviour/s** refers to bahaviour/s present in the preexisting non-fungible ERC-721 standard.
-[^13]: A **Default Value/s** refer to a value/s that emulates the non-fungible ERC-721 **Default Behaviour/s**.
-[^14]: A _PoS_ protocol, Proof-of-Stake protocol, is a cryptocurrency consensus mechanism for processing transactions and creating new blocks in a blockchain. Source - investopedia.com/terms/p/proof-stake-pos.asp website.
-[^15]: The `_allFunds` is a bool that can be set to true or false.
-[^16]: The `_time` in `allowApproval` represents the number of blocks an `approve` can take place in.
-[^17]: The `_numberOfTransfers` is the number of transfers a third-party entity can conduct via `transferFrom` on the user's behalf.
+[^5]: The **Holding Wallet** refers to the wallet containing the **NFKBTs**.
+[^6]: The `_tokenId` represents the ID of the **NFKBT** intended to be spent.
+[^7]: The `_time` in `allowTransfer` represents the number of blocks a `transferFrom` can take place in.
+[^8]: The `_address` represents the address that the **NFKBT** will be sent to.
+[^9]: The amount stolen in the USA provided by FTC reports.
+[^10]: A **Default Behavior/s** refers to behavior/s present in the preexisting non-fungible ERC-721 standard.
+[^11]: A **Default Value/s** refer to a value/s that emulates the non-fungible ERC-721 **Default Behavior/s**.
+[^12]: A _PoS_ protocol, Proof-of-Stake protocol, is a cryptocurrency consensus mechanism for processing transactions and creating new blocks in a blockchain.
+[^13]: The `_allFunds` is a bool that can be set to true or false.
+[^14]: The `_time` in `allowApproval` represents the number of blocks an `approve` can take place in.
+[^15]: The `_numberOfTransfers` is the number of transfers a third-party entity can conduct via `transferFrom` on the user's behalf.
